# fixpy

./: .gitignore  README.md  pyproject.toml  setup.py
fixpy/: __init__.py  fixed_point.py  functions.py
tests/: test_fixed_point.py  test_functions.py
