[project]
name = "fixpy"
version = "0.3.0"
description = "A numpy-like array class for fixed point algorithm design"
authors = [
    {name = "Henry Gomersall", email = "henry.gomersall@smartacoustics.co.uk"},
]
dependencies = [
    "numpy~=1.26",
    "scipy~=1.11",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GPL"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
